--- a/requirements.txt
+++ b/requirements.txt
@@ -1,169 +1,332 @@
 # ============================================================================
-# SPTRANS REAL-TIME PIPELINE - PYTHON DEPENDENCIES
+# SPTRANS PIPELINE - PYTHON DEPENDENCIES
 # ============================================================================
-# Instalação: pip install -r requirements.txt
-# Python Version: 3.11+
+# Requirements para o projeto SPTrans Pipeline
+# 
+# Instalação:
+#   pip install -r requirements.txt
+# 
+# Atualização:
+#   pip install --upgrade -r requirements.txt
 # ============================================================================
 
 # ============================================================================
-# APACHE AIRFLOW
+# CORE DEPENDENCIES
 # ============================================================================
-apache-airflow==2.8.0
-apache-airflow-providers-apache-spark==4.6.0
-apache-airflow-providers-celery==3.5.0
-apache-airflow-providers-postgres==5.9.0
-apache-airflow-providers-redis==3.5.0
+
+# Python version: >= 3.10
+python-dateutil==2.8.2
+pytz==2023.3
+
+# ============================================================================
+# AIRFLOW
+# ============================================================================
+
+# Apache Airflow
+apache-airflow==2.8.1
+apache-airflow-providers-apache-spark==4.5.0
+apache-airflow-providers-postgres==5.10.0
+apache-airflow-providers-http==4.7.0
 apache-airflow-providers-amazon==8.15.0
 
-# ============================================================================
-# APACHE SPARK & DELTA LAKE
-# ============================================================================
-pyspark==3.5.0
-delta-spark==3.0.0
-pyarrow==14.0.1
+# Celery (for CeleryExecutor)
+celery==5.3.4
+redis==5.0.1
 
 # ============================================================================
-# DATA PROCESSING & ANALYSIS
+# SPARK
 # ============================================================================
+
+# PySpark
+pyspark==3.5.0
+
+# ============================================================================
+# DATA PROCESSING
+# ============================================================================
+
+# Pandas & NumPy
 pandas==2.1.4
 numpy==1.26.2
-scipy==1.11.4
+
+# Data validation
+pydantic==2.5.3
+pydantic-settings==2.1.0
+
+# Date/time
+python-dateutil==2.8.2
+pytz==2023.3
 
 # ============================================================================
-# DATABASE DRIVERS
+# DATABASE
 # ============================================================================
+
+# PostgreSQL
 psycopg2-binary==2.9.9
-sqlalchemy==2.0.25
-redis==5.0.1
-pymongo==4.6.1
+SQLAlchemy==2.0.23
+
+# Database migrations (opcional)
+alembic==1.13.1
 
 # ============================================================================
-# AWS/S3 COMPATIBILITY (MinIO)
+# STORAGE (S3/MinIO)
 # ============================================================================
-boto3==1.34.19
-botocore==1.34.19
+
+# S3/MinIO client
+boto3==1.34.18
+botocore==1.34.18
 s3fs==2024.2.0
 
+# MinIO SDK
+minio==7.2.3
+
 # ============================================================================
-# HTTP & API
+# API & HTTP
 # ============================================================================
+
+# HTTP clients
 requests==2.31.0
-urllib3==2.1.0
 httpx==0.26.0
 aiohttp==3.9.1
 
+# URL parsing
+urllib3==2.1.0
+
 # ============================================================================
-# DATA VALIDATION & QUALITY
+# DATA FORMATS
 # ============================================================================
-pydantic==2.5.3
-great-expectations==0.18.8
-pandera==0.17.2
+
+# Parquet
+pyarrow==14.0.2
+fastparquet==2023.10.1
+
+# JSON
+orjson==3.9.12
+ujson==5.9.0
+
+# CSV
+csvkit==1.5.0
+
+# Excel
+openpyxl==3.1.2
+xlrd==2.0.1
 
 # ============================================================================
 # GEOSPATIAL
 # ============================================================================
-geopy==2.4.1
-shapely==2.0.2
+
+# Geospatial libraries
 geopandas==0.14.2
+shapely==2.0.2
+geopy==2.4.1
+folium==0.15.1
+
+# Geocoding (opcional)
+googlemaps==4.10.0
 
 # ============================================================================
-# MONITORING & OBSERVABILITY
+# DATA QUALITY & VALIDATION
 # ============================================================================
+
+# Data quality
+great-expectations==0.18.8
+
+# Schema validation
+jsonschema==4.20.0
+cerberus==1.3.5
+
+# ============================================================================
+# MONITORING & METRICS
+# ============================================================================
+
+# Prometheus
 prometheus-client==0.19.0
+
+# Metrics
 statsd==4.0.1
-opencensus==0.11.4
-opencensus-ext-prometheus==0.6.0
 
 # ============================================================================
-# LOGGING & TRACING
+# LOGGING
 # ============================================================================
+
+# Structured logging
 python-json-logger==2.0.7
 structlog==24.1.0
 
-# ============================================================================
-# CONFIGURATION
-# ============================================================================
-python-dotenv==1.0.0
-pyyaml==6.0.1
-toml==0.10.2
+# Log aggregation
+loguru==0.7.2
 
 # ============================================================================
 # TESTING
 # ============================================================================
-pytest==7.4.4
+
+# Testing framework
+pytest==7.4.3
 pytest-cov==4.1.0
 pytest-mock==3.12.0
-pytest-asyncio==0.23.3
+pytest-asyncio==0.23.2
+pytest-xdist==3.5.0
+
+# Mocking
+responses==0.24.1
 faker==22.0.0
-hypothesis==6.92.2
 
 # ============================================================================
 # CODE QUALITY
 # ============================================================================
-black==23.12.1
+
+# Linting
 flake8==7.0.0
-mypy==1.8.0
 pylint==3.0.3
+
+# Formatting
+black==23.12.1
 isort==5.13.2
 
-# ============================================================================
-# UTILITIES
-# ============================================================================
-click==8.1.7
-tqdm==4.66.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-tenacity==8.2.3
+# Type checking
+mypy==1.8.0
+
+# Security
+bandit==1.7.6
 
 # ============================================================================
-# SERIALIZATION
+# VISUALIZATION
 # ============================================================================
-msgpack==1.0.7
-ujson==5.9.0
-orjson==3.9.12
 
-# ============================================================================
-# SECURITY
-# ============================================================================
-cryptography==41.0.7
-pyjwt==2.8.0
-bcrypt==4.1.2
-
-# ============================================================================
-# DOCUMENTATION
-# ============================================================================
-sphinx==7.2.6
-sphinx-rtd-theme==2.0.0
-mkdocs==1.5.3
-
-# ============================================================================
-# JUPYTER (Development)
-# ============================================================================
-jupyter==1.0.0
-jupyterlab==4.0.10
-ipython==8.19.0
-notebook==7.0.6
-
-# ============================================================================
-# VISUALIZATION (for notebooks)
-# ============================================================================
+# Plotting
 matplotlib==3.8.2
 seaborn==0.13.1
 plotly==5.18.0
 
-# ============================================================================
-# ML (Opcional - para features futuras)
-# ============================================================================
-scikit-learn==1.3.2
-xgboost==2.0.3
-lightgbm==4.1.0
+# Dashboard
+dash==2.14.2
+streamlit==1.29.0
 
 # ============================================================================
-# KAFKA (Opcional - se KAFKA_ENABLED=true)
+# JUPYTER
 # ============================================================================
-# kafka-python==2.0.2
-# confluent-kafka==2.3.0
+
+# Jupyter
+jupyter==1.0.0
+jupyterlab==4.0.10
+notebook==7.0.6
+
+# Jupyter extensions
+ipywidgets==8.1.1
+ipython==8.19.0
 
 # ============================================================================
-# FIM DO ARQUIVO
+# UTILITIES
+# ============================================================================
+
+# Configuration
+python-dotenv==1.0.0
+pyyaml==6.0.1
+toml==0.10.2
+
+# CLI
+click==8.1.7
+typer==0.9.0
+
+# Progress bars
+tqdm==4.66.1
+
+# Retry logic
+tenacity==8.2.3
+
+# Caching
+cachetools==5.3.2
+
+# ============================================================================
+# DOCUMENTATION
+# ============================================================================
+
+# Sphinx documentation (opcional)
+# sphinx==7.2.6
+# sphinx-rtd-theme==2.0.0
+
+# ============================================================================
+# MACHINE LEARNING (opcional)
+# ============================================================================
+
+# Uncomment if using ML features
+# scikit-learn==1.3.2
+# xgboost==2.0.3
+# lightgbm==4.1.0
+# tensorflow==2.15.0
+# torch==2.1.2
+
+# ============================================================================
+# CLOUD PROVIDERS (opcional)
+# ============================================================================
+
+# AWS
+# boto3==1.34.18
+# awscli==1.32.18
+
+# GCP
+# google-cloud-storage==2.14.0
+# google-cloud-bigquery==3.14.1
+
+# Azure
+# azure-storage-blob==12.19.0
+# azure-identity==1.15.0
+
+# ============================================================================
+# EXTRAS
+# ============================================================================
+
+# Encryption
+cryptography==41.0.7
+
+# Compression
+zstandard==0.22.0
+
+# Schedule
+schedule==1.2.1
+
+# Email
+# sendgrid==6.11.0
+
+# Slack integration
+# slack-sdk==3.26.2
+
+# ============================================================================
+# DEVELOPMENT TOOLS
+# ============================================================================
+
+# Debugging
+ipdb==0.13.13
+
+# Profiling
+# memory-profiler==0.61.0
+# py-spy==0.3.14
+
+# ============================================================================
+# PINNED VERSIONS FOR COMPATIBILITY
+# ============================================================================
+
+# Ensure compatibility
+werkzeug==3.0.1
+jinja2==3.1.2
+markupsafe==2.1.3
+
+# ============================================================================
+# NOTES
+# ============================================================================
+
+# IMPORTANT:
+# - Keep this file updated
+# - Pin versions for production
+# - Test all upgrades in development first
+# - Create requirements-dev.txt for development-only dependencies
+# - Use virtual environment: python -m venv venv
+
+# Version check:
+#   pip list --outdated
+
+# Generate from environment:
+#   pip freeze > requirements-freeze.txt
+
+# ============================================================================
+# END
 # ============================================================================
