modified:   requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,332 +1,26 @@
-# ============================================================================
-# SPTRANS PIPELINE - PYTHON DEPENDENCIES
-# ============================================================================
-# Requirements para o projeto SPTrans Pipeline
-# 
-# Instalação:
-#   pip install -r requirements.txt
-# 
-# Atualização:
-#   pip install --upgrade -r requirements.txt
-# ============================================================================
+# ──────────────── CORE DO PIPELINE ────────────────
+apache-airflow==2.8.0
+apache-airflow-providers-http==4.6.0
+apache-airflow-providers-postgres==5.7.0
 
-# ============================================================================
-# CORE DEPENDENCIES
-# ============================================================================
-
-# Python version: >= 3.10
-python-dateutil==2.8.2
-pytz==2023.3
-
-# ============================================================================
-# AIRFLOW
-# ============================================================================
-
-# Apache Airflow
-apache-airflow==2.8.1
-apache-airflow-providers-apache-spark==4.5.0
-apache-airflow-providers-postgres==5.10.0
-apache-airflow-providers-http==4.7.0
-apache-airflow-providers-amazon==8.15.0
-
-# Celery (for CeleryExecutor)
-celery==5.3.4
-redis==5.0.1
-
-# ============================================================================
-# SPARK
-# ============================================================================
-
-# PySpark
 pyspark==3.5.0
-
-# ============================================================================
-# DATA PROCESSING
-# ============================================================================
-
-# Pandas & NumPy
-pandas==2.1.4
-numpy==1.26.2
-
-# Data validation
-pydantic==2.5.3
-pydantic-settings==2.1.0
-
-# Date/time
-python-dateutil==2.8.2
-pytz==2023.3
-
-# ============================================================================
-# DATABASE
-# ============================================================================
-
-# PostgreSQL
-psycopg2-binary==2.9.9
-SQLAlchemy==2.0.23
-
-# Database migrations (opcional)
-alembic==1.13.1
-
-# ============================================================================
-# STORAGE (S3/MinIO)
-# ============================================================================
-
-# S3/MinIO client
-boto3==1.34.18
-botocore==1.34.18
-s3fs==2024.2.0
-
-# MinIO SDK
-minio==7.2.3
-
-# ============================================================================
-# API & HTTP
-# ============================================================================
-
-# HTTP clients
 requests==2.31.0
-httpx==0.26.0
-aiohttp==3.9.1
+httpx==0.27.0
 
-# URL parsing
-urllib3==2.1.0
+# ──────────────── CONFIGURAÇÃO E VALIDAÇÃO ────────────────
+pydantic==2.5.2
+python-dotenv==1.0.0
 
-# ============================================================================
-# DATA FORMATS
-# ============================================================================
-
-# Parquet
-pyarrow==14.0.2
+# ──────────────── MANIPULAÇÃO DE DADOS ────────────────
+pandas==2.1.3
+geopy==2.4.0
+pyarrow==14.0.1
 fastparquet==2023.10.1
 
-# JSON
-orjson==3.9.12
-ujson==5.9.0
-
-# CSV
-csvkit==1.5.0
-
-# Excel
-openpyxl==3.1.2
-xlrd==2.0.1
-
-# ============================================================================
-# GEOSPATIAL
-# ============================================================================
-
-# Geospatial libraries
-geopandas==0.14.2
-shapely==2.0.2
-geopy==2.4.1
-folium==0.15.1
-
-# Geocoding (opcional)
-googlemaps==4.10.0
-
-# ============================================================================
-# DATA QUALITY & VALIDATION
-# ============================================================================
-
-# Data quality
-great-expectations==0.18.8
-
-# Schema validation
-jsonschema==4.20.0
-cerberus==1.3.5
-
-# ============================================================================
-# MONITORING & METRICS
-# ============================================================================
-
-# Prometheus
+# ──────────────── MONITORAMENTO E LOGS ────────────────
 prometheus-client==0.19.0
-
-# Metrics
-statsd==4.0.1
-
-# ============================================================================
-# LOGGING
-# ============================================================================
-
-# Structured logging
-python-json-logger==2.0.7
-structlog==24.1.0
-
-# Log aggregation
 loguru==0.7.2
 
-# ============================================================================
-# TESTING
-# ============================================================================
-
-# Testing framework
+# ──────────────── TESTES (opcional) ────────────────
 pytest==7.4.3
-pytest-cov==4.1.0
 pytest-mock==3.12.0
-pytest-asyncio==0.23.2
-pytest-xdist==3.5.0
-
-# Mocking
-responses==0.24.1
-faker==22.0.0
-
-# ============================================================================
-# CODE QUALITY
-# ============================================================================
-
-# Linting
-flake8==7.0.0
-pylint==3.0.3
-
-# Formatting
-black==23.12.1
-isort==5.13.2
-
-# Type checking
-mypy==1.8.0
-
-# Security
-bandit==1.7.6
-
-# ============================================================================
-# VISUALIZATION
-# ============================================================================
-
-# Plotting
-matplotlib==3.8.2
-seaborn==0.13.1
-plotly==5.18.0
-
-# Dashboard
-dash==2.14.2
-streamlit==1.29.0
-
-# ============================================================================
-# JUPYTER
-# ============================================================================
-
-# Jupyter
-jupyter==1.0.0
-jupyterlab==4.0.10
-notebook==7.0.6
-
-# Jupyter extensions
-ipywidgets==8.1.1
-ipython==8.19.0
-
-# ============================================================================
-# UTILITIES
-# ============================================================================
-
-# Configuration
-python-dotenv==1.0.0
-pyyaml==6.0.1
-toml==0.10.2
-
-# CLI
-click==8.1.7
-typer==0.9.0
-
-# Progress bars
-tqdm==4.66.1
-
-# Retry logic
-tenacity==8.2.3
-
-# Caching
-cachetools==5.3.2
-
-# ============================================================================
-# DOCUMENTATION
-# ============================================================================
-
-# Sphinx documentation (opcional)
-# sphinx==7.2.6
-# sphinx-rtd-theme==2.0.0
-
-# ============================================================================
-# MACHINE LEARNING (opcional)
-# ============================================================================
-
-# Uncomment if using ML features
-# scikit-learn==1.3.2
-# xgboost==2.0.3
-# lightgbm==4.1.0
-# tensorflow==2.15.0
-# torch==2.1.2
-
-# ============================================================================
-# CLOUD PROVIDERS (opcional)
-# ============================================================================
-
-# AWS
-# boto3==1.34.18
-# awscli==1.32.18
-
-# GCP
-# google-cloud-storage==2.14.0
-# google-cloud-bigquery==3.14.1
-
-# Azure
-# azure-storage-blob==12.19.0
-# azure-identity==1.15.0
-
-# ============================================================================
-# EXTRAS
-# ============================================================================
-
-# Encryption
-cryptography==41.0.7
-
-# Compression
-zstandard==0.22.0
-
-# Schedule
-schedule==1.2.1
-
-# Email
-# sendgrid==6.11.0
-
-# Slack integration
-# slack-sdk==3.26.2
-
-# ============================================================================
-# DEVELOPMENT TOOLS
-# ============================================================================
-
-# Debugging
-ipdb==0.13.13
-
-# Profiling
-# memory-profiler==0.61.0
-# py-spy==0.3.14
-
-# ============================================================================
-# PINNED VERSIONS FOR COMPATIBILITY
-# ============================================================================
-
-# Ensure compatibility
-werkzeug==3.0.1
-jinja2==3.1.2
-markupsafe==2.1.3
-
-# ============================================================================
-# NOTES
-# ============================================================================
-
-# IMPORTANT:
-# - Keep this file updated
-# - Pin versions for production
-# - Test all upgrades in development first
-# - Create requirements-dev.txt for development-only dependencies
-# - Use virtual environment: python -m venv venv
-
-# Version check:
-#   pip list --outdated
-
-# Generate from environment:
-#   pip freeze > requirements-freeze.txt
-
-# ============================================================================
-# END
-# ============================================================================
